--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tienda React</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap');
+    </style>
+    
   <link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css">
 </head>
 <body>
