--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tienda React</title>
+  <title>CROSSTORE | By CrossFactory</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap');
     </style>
